@@ -47,7 +47,10 @@ echo $_xml_header ?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://ww
 
 <body class="p4a_browser_<?php echo P4A::singleton()->getBrowser() ?>">
 <div id='p4a_body' class='p4a_browser_<?php echo P4A::singleton()->getBrowserOS() ?>'>
-<div id='p4a_loading'><img src='<?php echo P4A_THEME_PATH ?>/loading.gif' alt='' /> <?php echo __('Loading...') ?></div>
+<div id='p4a_loading'>
+	<img src='<?php echo P4A_THEME_PATH ?>/loading.gif' alt='' /> <?php echo __('Loading...') ?>
+	<div id='p4a_loading_percentage'></div>
+</div>
 <div class='p4a_system_messages'>
 	<div class='p4a_system_messages_inner'>
 		<?php foreach (P4A::singleton()->getRenderedMessages() as $message): ?>
