@@ -29,6 +29,8 @@
   was solved
 - CKEditor's forcePasteAsPlainText option was enabled again
 - jQuery::form was updated to 2.47
+- file upload percentage and speed is shown while uploading
+  (if PECL uploadprogress is available)
 
 3.6.2
 - P4A_Field::setSource() now correctly handles null param
